<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="temperature" translatable="false">%1$sº</string>
    <string name="error">Something went wrong!</string>
    <string name="peaks" translatable="false">Min.:%1$sº Max.:%2$sº</string>
    <string name="forecast">Forecast (7 days)</string>
    <string name="today">Today</string>
    <string name="monday">Mon. </string>
    <string name="tuesday">Tue. </string>
    <string name="wednesday">Wed. </string>
    <string name="thursday">Thu. </string>
    <string name="friday">Fri. </string>
    <string name="saturday">Sat. </string>
    <string name="sunday">Sun. </string>
    <string name="nogps">If you see this text, you need to enable GPS permissions for this app</string>
    <string name="description">Weather</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="cities">Cities</string>
    <string name="fields">Fields cannot be empty</string>
    <string name="checkEmail">Check your email</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_yet_registered">Not yet registered? Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_an_user">Already an user? Login</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="add_city">Add city</string>
    <string name="creators">About the creators</string>
    <string name="student23032"><a href="https://github.com/aluno23032">student23032</a></string>
    <string name="student23319"><a href="https://github.com/AndreValaa">student23319</a></string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
</resources>