<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/optHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/optRegister"
        android:title="@string/register"
        android:icon="@drawable/ic_register"/>

    <item
        android:id="@+id/optLogin"
        android:title="@string/login"
        android:icon="@drawable/ic_login"/>

    <item
        android:id="@+id/optCities"
        android:title="@string/cities"
        android:icon="@drawable/ic_city"/>

    <item
        android:id="@+id/optLogout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>

    <item
        android:id="@+id/optCreators"
        android:title="@string/creators"
        android:icon="@drawable/ic_people"/>
</menu>