<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogForgot"
    android:padding="0dp"
    android:background="@drawable/bggradientnight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/dialogBox"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="500dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/forgotTitle"
            app:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc"
            android:text="@string/enter_your_email_address"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#AEADD7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintBottom_toTopOf="@id/editBox"/>

        <EditText
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:id="@+id/editBox"
            android:textColorHint="@color/white"
            android:textColor="#AEADD7"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:backgroundTint="#AEADD7"
            android:layout_marginBottom="15dp"
            android:maxLines="1"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/btnCancel"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:backgroundTint="#5956AE"
            android:layout_marginBottom="8dp"
            app:cornerRadius = "20dp"
            app:layout_constraintTop_toBottomOf="@id/editBox"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/btnReset"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:backgroundTint="#5956AE"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            app:cornerRadius = "20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>