<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/bggradientnight"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="350dp"
                android:contentDescription="@string/menu"
                app:srcCompat="@drawable/ic_menu" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="45dp"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="#F6F8F5"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/country"
                    android:layout_width="265dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/country"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:background="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="45dp"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="#F6F8F5"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/city"
                    android:layout_width="265dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/country"
                    android:layout_marginTop="10dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:background="@color/white"
                    />
                <Button
                    android:id="@+id/addBtn"
                    android:layout_gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/add_city"
                    android:backgroundTint="#5956AE"
                    android:textSize="18sp"
                    app:cornerRadius="30dp"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/navigation_items" />
</androidx.drawerlayout.widget.DrawerLayout>